--- a/emoji-interpreter/src/App.css
+++ b/emoji-interpreter/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+input {
+  width: 80%;
+  padding: 1rem;
+}
+
+span {
+  font-size: 1.8rem;
+  padding: 0.8rem;
+  cursor: pointer;
+}
